--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "qs": "^6.9.4",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.21.1",
